# axio-emulator

./: .gitignore  LICENSE  Makefile  README.md  init_dependencies.sh  meson.build  scan_include.py  scan_src.py
config/: recv_config  send_config  template_config  temple_config
scripts/: init.sh  perf_profile.sh  scp_command.sh  ssh_command.sh
scripts/host-metric/: README.md  collect_iio_occ  collect_iio_occ.c  cpu_util.py  pcie_util.py  record-host-metrics.sh
src/: common.h  config.cc  config.h  datapath_pipeline.h  dispatcher.h  main.cc  tuning.h  workspace.h
src/dispatcher_impl/: arphdr.h  dispatcher.cc  ethhdr.cc  ethhdr.h  iphdr.cc  iphdr.h
src/dispatcher_impl/dpdk/: dpdk_dispatcher.cc  dpdk_dispatcher.h  dpdk_dispatcher_dataplane.cc  dpdk_externs.cc  dpdk_externs.h  dpdk_init.cc  dpdk_pkt_handlers.cc  mbuf_util.h
src/dispatcher_impl/roce/: buffer.h  huge_alloc.cc  huge_alloc.h  qpinfo.hh  roce_dispatcher.cc  roce_dispatcher.h  roce_dispatcher_dataplane.cc  roce_pkt_handlers.cc  verbs_common.h
src/util/: barrier.h  buffer.h  cpu_behaviour.h  huge_alloc.h  kv.h  lock_free_queue.h  logger.h  math_utils.h  mgnt_connection.h  net_stats.cc  net_stats.h  numautils.cc  numautils.h  rand.h  rule_table.h  timer.h
src/ws_impl/: msg_handler.cc  msg_handlers.cc  workspace.cc  workspace_context.h  ws_hdr.h
toolchain/: config_parser.py  main.py  tuner.py
